List 수정